--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://eleventy-html5up-aerial.appseed.us",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "autoprefixer": "^9.6.1",
